@@ -38,8 +38,10 @@ uptime
 users
 vmstat
 EOF
-    # some plugins are only installed if specific programs are available in the test environment
-    if [ -x /usr/sbin/conntrack ]; then
+    # Some plugins are only installed if the test environment fulfills the conditions specified in
+    # their "autoconf" section. Thus the conditions below are a copy of the "autoconf" conditions
+    # of the affected plugins.
+    if [ -x /usr/sbin/conntrack ] || [ -e /proc/net/nf_conntrack ] || [ -e /proc/net/ip_conntrack ]; then
       echo fw_conntrack
       echo fw_forwarded_local
     fi
