@@ -1,6 +1,9 @@
 munin (2.0.42-5) UNRELEASED; urgency=medium
 
   * Re-arrange tests for improved readability of test output
+  * Tests: Properly detect the assumed presence of the conntrack-related munin
+    plugins. Previously only the conntrack executable was checked - now the
+    alternative procfs files are evaluated, too. (Really closes: #910684)
 
  -- Lars Kruse <devel@sumpfralle.de>  Sat, 10 Nov 2018 16:03:16 +0100
 
